--- a/pokedex/pokedex/Base.lproj/Main.storyboard
+++ b/pokedex/pokedex/Base.lproj/Main.storyboard
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1611" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="pokedex" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +20,103 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Lp-45-r0U">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="65"/>
+                                <color key="backgroundColor" red="1" green="0.34509803921568627" blue="0.33333333333333331" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="65" id="yuV-VH-WwR"/>
+                                </constraints>
+                            </view>
+                            <searchBar contentMode="redraw" searchBarStyle="minimal" translatesAutoresizingMaskIntoConstraints="NO" id="jjh-SC-Ho9">
+                                <rect key="frame" x="0.0" y="65" width="375" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="t2e-rS-52e"/>
+                                </constraints>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="4Vh-k4-Pa5">
+                                <rect key="frame" x="0.0" y="109" width="375" height="558"/>
+                            </imageView>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="pfa-1K-EGV">
+                                <rect key="frame" x="20" y="129" width="335" height="518"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="XJJ-2o-VaT">
+                                    <size key="itemSize" width="105" height="105"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PokeCell" id="5MX-Nn-vKi" customClass="PokeCell" customModule="pokedex" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="105" height="105"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="105" height="105"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" alpha="0.80000000000000004" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="8" translatesAutoresizingMaskIntoConstraints="NO" id="R8E-oR-n2P">
+                                                    <rect key="frame" x="0.0" y="0.0" width="105" height="80"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="80" id="7Rs-dD-8UF"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" alpha="0.80000000000000004" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Wartortle" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wBx-6U-XSl">
+                                                    <rect key="frame" x="0.0" y="80" width="105" height="25"/>
+                                                    <color key="backgroundColor" red="1" green="0.34509803919999998" blue="0.33333333329999998" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="14"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstItem="R8E-oR-n2P" firstAttribute="leading" secondItem="5MX-Nn-vKi" secondAttribute="leading" id="02I-G1-Utr"/>
+                                            <constraint firstItem="wBx-6U-XSl" firstAttribute="top" secondItem="R8E-oR-n2P" secondAttribute="bottom" id="1pB-Lp-cXY"/>
+                                            <constraint firstAttribute="trailing" secondItem="wBx-6U-XSl" secondAttribute="trailing" id="3fm-ZD-WZC"/>
+                                            <constraint firstItem="wBx-6U-XSl" firstAttribute="leading" secondItem="5MX-Nn-vKi" secondAttribute="leading" id="JQd-rm-lJP"/>
+                                            <constraint firstAttribute="bottom" secondItem="wBx-6U-XSl" secondAttribute="bottom" id="SK6-2B-luS"/>
+                                            <constraint firstItem="R8E-oR-n2P" firstAttribute="top" secondItem="5MX-Nn-vKi" secondAttribute="top" id="mRw-7J-bII"/>
+                                            <constraint firstAttribute="trailing" secondItem="R8E-oR-n2P" secondAttribute="trailing" id="oxR-WD-HmP"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="nameLbl" destination="wBx-6U-XSl" id="Sy7-tj-yaE"/>
+                                            <outlet property="thumbImg" destination="R8E-oR-n2P" id="5yv-Dj-cQg"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="4Vh-k4-Pa5" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="3g5-bD-WJE"/>
+                            <constraint firstItem="pfa-1K-EGV" firstAttribute="top" secondItem="jjh-SC-Ho9" secondAttribute="bottom" constant="20" id="5tj-ZH-kdb"/>
+                            <constraint firstAttribute="trailing" secondItem="pfa-1K-EGV" secondAttribute="trailing" constant="20" id="7EO-5Y-QSF"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="4Vh-k4-Pa5" secondAttribute="bottom" id="87F-Fl-o4w"/>
+                            <constraint firstAttribute="trailing" secondItem="jjh-SC-Ho9" secondAttribute="trailing" id="Gms-rb-Emg"/>
+                            <constraint firstAttribute="trailing" secondItem="3Lp-45-r0U" secondAttribute="trailing" id="MMo-jk-JX0"/>
+                            <constraint firstItem="3Lp-45-r0U" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="PNe-kd-IiT"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="pfa-1K-EGV" secondAttribute="bottom" constant="20" id="Qgk-Sw-wau"/>
+                            <constraint firstAttribute="trailing" secondItem="4Vh-k4-Pa5" secondAttribute="trailing" id="Zzy-r0-PYu"/>
+                            <constraint firstItem="3Lp-45-r0U" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="oTn-3X-vf9"/>
+                            <constraint firstItem="jjh-SC-Ho9" firstAttribute="top" secondItem="3Lp-45-r0U" secondAttribute="bottom" id="pKa-c3-0RV"/>
+                            <constraint firstItem="4Vh-k4-Pa5" firstAttribute="top" secondItem="jjh-SC-Ho9" secondAttribute="bottom" id="qHQ-JS-C5h"/>
+                            <constraint firstItem="jjh-SC-Ho9" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="yl3-79-GDK"/>
+                            <constraint firstItem="pfa-1K-EGV" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="20" id="zqz-OI-W6q"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="collection" destination="pfa-1K-EGV" id="3Af-GK-pXs"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="135.38230884557723"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="8" width="120" height="120"/>
+        <image name="bg" width="1920" height="1200"/>
+    </resources>
 </document>
